--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
         <footer>
             
         </footer>
-    <script type="text/javascript" src="../js/script.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
