--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop.com | Home page</title>
     <!-- favicon -->
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- media queries -->
@@ -120,42 +120,42 @@
                         <!-- product block -->
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/Chocolate.jpg" alt="productimg">
+                            <img src="img/products_img/Chocolate.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Chocolate organic</a></span> 
                         <a class="card_price_product">From $1.99</a>
                     </div>
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/hemp-oil.jpg" alt="productimg">
+                            <img src="img/products_img/hemp-oil.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Hemp oil organic</a></span>
                         <span class="card_price_product">From $10</span>
                     </div>
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/hemp_conditioner.jpg" alt="productimg">
+                            <img src="img/products_img/hemp_conditioner.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Hemp conditioner organic</a></span>
                         <span class="card_price_product">From $32</span>
                     </div>
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/hemp_conditioner.jpg" alt="productimg">
+                            <img src="img/products_img/hemp_conditioner.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Hemp conditioner organic</a></span>
                         <span class="card_price_product">From $32</span>
                     </div>
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/hemp_conditioner.jpg" alt="productimg">
+                            <img src="img/products_img/hemp_conditioner.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Hemp conditioner organic</a></span>
                         <span class="card_price_product">From $32</span>
                     </div>
                      <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/Chocolate.jpg" alt="productimg">
+                            <img src="img/products_img/Chocolate.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Chocolate organic</a></span> 
                         <span class="card_price_product">From $1.99</span>
