--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
     <!-- favicon -->
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <!-- css -->
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="/css/style.css" type="text/css">
     <!-- media queries -->
-    <link rel="stylesheet" href="css/media-queries.css" type="text/css">
-    <!-- flex slider css -->
-    <link rel="stylesheet" href="css/flexslider.css" type="text/css">
+    <link rel="stylesheet" href="/css/media-queries.css" type="text/css">
     <!--google font family-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;900&display=swap" rel="stylesheet">
     <!-- glider slider -->
-    <link rel="stylesheet" href="css/glider.css" type="text/css">
+    <link rel="stylesheet" href="/css/glider.css" type="text/css">
 </head>
 <body>
     <header>
