--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop.com | Home page</title>
     <!-- favicon -->
-    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
     <!-- css -->
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <link rel="stylesheet" href="../css/style.css" type="text/css">
     <!-- media queries -->
-    <link rel="stylesheet" href="/css/media-queries.css" type="text/css">
+    <link rel="stylesheet" href="../css/media-queries.css" type="text/css">
     <!--google font family-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;900&display=swap" rel="stylesheet">
     <!-- glider slider -->
-    <link rel="stylesheet" href="/css/glider.css" type="text/css">
+    <link rel="stylesheet" href="../css/glider.css" type="text/css">
 </head>
 <body>
     <header>
@@ -113,42 +113,42 @@
                 <!-- cards  -->
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/Chocolate.jpg" alt="productimg">
+                            <img src="../img/products_img/Chocolate.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Chocolate organic</a></span> 
                         <span class="card_price_product">From $1.99</span>
                     </div>
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/hemp-oil.jpg" alt="productimg">
+                            <img src="../img/products_img/hemp-oil.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Hemp oil organic</a></span>
                         <span class="card_price_product">From $9.90</span>
                     </div>
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/hemp_conditioner.jpg" alt="productimg">
+                            <img src="../img/products_img/hemp_conditioner.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Hemp conditioner organic</a></span>
                         <span class="card_price_product">From $12</span>
                     </div>
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/creatine.jpg" alt="productimg">
+                            <img src="../img/products_img/creatine.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Creatine organic</a></span>
                         <span class="card_price_product">From $20</span>
                     </div>
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/candy.jpg" alt="productimg">
+                            <img src="../img/products_img/candy.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Sweets without sugar bio</a></span>
                         <span class="card_price_product">From $2</span>
                     </div>
                      <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/protein.jpg" alt="productimg">
+                            <img src="../img/products_img/protein.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Protein organic</a></span> 
                         <span class="card_price_product">From $30.99</span>
@@ -171,42 +171,42 @@
                 <!-- cards  -->
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/Chocolate.jpg" alt="productimg">
+                            <img src="../img/products_img/Chocolate.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Chocolate organic</a></span> 
                         <span class="card_price_product">From $1.99</span>
                     </div>
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/hemp-oil.jpg" alt="productimg">
+                            <img src="../img/products_img/hemp-oil.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Hemp oil organic</a></span>
                         <span class="card_price_product">From $10</span>
                     </div>
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/hemp_conditioner.jpg" alt="productimg">
+                            <img src="../img/products_img/hemp_conditioner.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Hemp conditioner organic</a></span>
                         <span class="card_price_product">From $32</span>
                     </div>
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/hemp_conditioner.jpg" alt="productimg">
+                            <img src="../img/products_img/hemp_conditioner.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Hemp conditioner organic</a></span>
                         <span class="card_price_product">From $32</span>
                     </div>
                     <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/hemp_conditioner.jpg" alt="productimg">
+                            <img src="../img/products_img/hemp_conditioner.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Hemp conditioner organic</a></span>
                         <span class="card_price_product">From $32</span>
                     </div>
                      <div class="card">
                         <div class="wrapper_for_img">
-                            <img src="/img/products_img/Chocolate.jpg" alt="productimg">
+                            <img src="../img/products_img/Chocolate.jpg" alt="productimg">
                         </div>
                         <span class="card_name_product"><a href="#">Chocolate organic</a></span> 
                         <span class="card_price_product">From $1.99</span>
